# CausticLexer

./: .gitignore  README.md  calex.py  grammer_parser.py  pattern_loader.py  pragma.py  pyproject.toml  requirements.txt
comments/: c-like.cgram
grammar/: __init__.py
grammar/loaders/: __init__.py  pattern.py
grammar/nodes/: __init__.py  base.py  exceptions.py  flat.py  meta.py  nested.py
grammar/patterns/: __init__.py  buffermatcher.py
grammers/: c-like.ebnf
grammers/blocks/: c-like.cgram  py-like.cgram
grammers/c-like/: block.ebnf  comments.ebnf  import.ebnf  operators.ebnf  procedures.ebnf
grammers/comments/: c-like.cgram  py-like.cgram
grammers/generic/: expression.ebnf  identifier.cgram  identifier.ebnf  main.ebnf  operators.ebnf  pragmas.cgram  statement.ebnf
grammers/generic/literals/: decimal.ebnf  integer.ebnf  literals.ebnf  numeric.cgram
grammers/line/: c-like.cgram  py-like.cgram
lib/: __init__.py  buffer_matcher.py  grammer_parser.py  pragma.py  tokenizer.py  tokens.py
lib/loaders/: nodes.py
lib/nodes/: __init__.py  base.py  exceptions.py  meta.py  nested.py
loaders/: nodes.py
nodes/: base.py
patternlib/: __init__.py  buffer_matcher.py
pyparser_test/: config_loader.py  grammer.py
pyparser_test/grammer/: base.ccfg  identifier.ccfg  pragmas.ccfg
src/: buffer_matcher.py  compiler.py  grammar_compiler.py  grammar_executor.py  nodes.py
src/caustic/lexer/: __init__.py  bootstrapped_compiler.py  compiler.py  grammar.cag  nodes.py  precompiled_nodes.pkl  serialize.py  util.py
