[project]
name = "caustic.lexer"
version = "0.1.0"
dependencies = []
requires-python = ">=3.12"
authors = [{name="Shae.c32"}]
maintainers = []
description = "Grammar compilation for Caustic"
readme = "README.md"
keywords = []
classifiers = []

[project.urls]
Homepage = "https://codeberg.org/Caustic/CausticLexer"
Issues = "https://codeberg.org/Caustic/CausticLexer/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
